2005-07-04  Charles Levert  <charles_levert@gna.org>

	* src/kwset.c: Readability changes.
	  Replace uses of 0 for pointer values by NULL.
	  Generalize use of existing U() macro to whole file.

2005-06-22  Charles Levert  <charles_levert@gna.org>

	* grep/autogen.sh, grep/src/Makefile.am, grep/tests/backref.sh,
	  grep/tests/bre.sh, grep/tests/empty.sh, grep/tests/ere.sh,
	  grep/tests/file.sh, grep/tests/fmbtest.sh, grep/tests/foad1.sh,
	  grep/tests/khadafy.sh, grep/tests/options.sh,
	  grep/tests/spencer1.sh, grep/tests/spencer2.sh,
	  grep/tests/status.sh, grep/tests/warning.sh: As per autoconf's
	  "Portable Shell Programming" guidelines, replace all instances
	  of "#!/bin/sh" by "#! /bin/sh" (notice the space).

2005-06-21  Charles Levert  <charles_levert@gna.org>

	* src/grep.c (nlscan): Make this function more robust by removing
	  the undocumented assumption that its "lim" argument points
	  right after a line boundary.  This will be used later to fix
	  --byte-offset's broken behavior.  Patch #3769.

	* src/grep.c (main): Add a test to check if -o/--only-matching
	  and context lines are both specified and if so, set both context
	  specifications (before and after) to zero then print an explicit
	  warning to stderr explaining what was done and why (as opposed
	  to drastically aborting the process in error).  Patch #3768.
	  Other code needs this zero setting to work correctly without
	  having to repeatedly test for this conflictual condition.

	* tests/foad1.sh: Add tests combining -o, -n/-b/-H, and -i,
	  since there are separate code paths for -i.  Add tests combining
	  -o, -n/-b/-H, and -3, since any context line specification
	  should be ignored when combined with -o.
	* src/grep.c (print_line_head): New function, culled off the
	  top content of prline().  Adds a guard against "lastnl" having
	  already reached "lim", which can happen when if the function
	  is called more than once per line.