@@ -4,6 +4,8 @@
 	  Replace uses of 0 for pointer values by NULL.
 	  Generalize use of existing U() macro to whole file.
 
+	* src/kwset.c (kwsprep): Use memset() and memcpy() when appropriate.
+
 2005-06-22  Charles Levert  <charles_levert@gna.org>
 
 	* grep/autogen.sh, grep/src/Makefile.am, grep/tests/backref.sh,
